# dl-tutorials

./: .gitignore  .pre-commit-config.yaml  README.md  nbclean-hook.sh  pyproject.toml
src/dl_tutorials/msg_passing_gnn_01/: README.md  datasets.py  recommender.py
